--- a/basic/header.html
+++ b/basic/header.html
@@ -15,7 +15,7 @@
 <header class="main-header">
     <div>
         <a href="header.html" class="main-header-brand">
-            uHost
+            iFree
         </a>
     </div>
     <nav class="main-nav">
@@ -27,7 +27,7 @@
                 <a href="customers/index.html">Customers</a>
             </li>
             <li class="main-nav-item main-nav-item-cta">
-                <a href="start-hosting/index.html">Start Hosting</a>
+                <a href="start-hosting/index.html">Start Dreaming and I will set you free</a>
             </li>
         </ul>
     </nav>
