--- a/basic/header.html
+++ b/basic/header.html
@@ -27,7 +27,7 @@
                 <a href="customers/index.html">Customers</a>
             </li>
             <li class="main-nav-item main-nav-item-cta">
-                <a href="start-hosting/index.html">Start Dreaming and I will set you free</a>
+                <a href="start-hosting/index.html">Start Playing</a>
             </li>
         </ul>
     </nav>
